Update metadata and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,34 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>KashishVerse | Original Poetry & Reflections</title>
+  <meta name="description" content="KashishVerse is a personal poetry archive featuring original poems, reflections, and emotional writings by Kashish.">
+  <meta name="keywords" content="poetry, poems, reflections, KashishVerse, Indian poet">
+  <meta name="author" content="Kashish">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="canonical" href="https://kashishverse-in.github.io/">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
 <header>
   <h1>KashishVerse</h1>
+  <p class="tagline">Original Poetry & Quiet Reflections</p>
+
   <nav>
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="stories.html">Stories</a>
     <a href="essays.html">Essays</a>
     <a href="library.html">Library</a>
+    <a href="quotes.html">Quotes</a>
     <a href="archive.html">Archive</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <main>
-  <h2>Welcome</h2>
-  <p>
-    KashishVerse is a quiet space for poetry, stories, and reflections—
-    written to linger beyond words.
-  </p>
+  <section class="content">
+    <h2>Latest Poem</h2>
+    <p>
+      Silence has a voice<br>
+      only the lonely understand.<br>
+      Words rest between breaths,<br>
+      waiting to be felt, not spoken.
+    </p>
+  </section>
 </main>
 
 <footer>
-  <p>© KashishVerse</p>
+  <p>© 2025 KashishVerse. All rights reserved.</p>
 </footer>
-
 </body>
 </html>
