Modify footer copyright and add license details
Updated footer text and added licensing information.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </main>
 
 <footer>
-  <p>© 2025 KashishVerse. All rights reserved.</p>
+ © 2025 Kashish. All rights reserved.
+Content licensed under CC BY-NC-ND 4.0.
 </footer>
 </body>
 </html>
