--- a/index.html
+++ b/index.html
@@ -2,51 +2,154 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>KashishVerse | Original Poetry & Reflections</title>
-  <meta name="description" content="KashishVerse is a personal poetry archive featuring original poems, reflections, and emotional writings by Kashish.">
-  <meta name="keywords" content="poetry, poems, reflections, KashishVerse, Indian poet">
+  <title>KashishVerse | Poetry, Reflections & Visual Stories</title>
+
+  <meta name="description" content="KashishVerse is a personal poetry space by Kashish, blending words and visuals to explore humanity, nature, love, memory, and self-reflection.">
+  <meta name="keywords" content="poetry blog, poems with images, reflective poetry, nature poems, KashishVerse">
   <meta name="author" content="Kashish">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="canonical" href="https://kashishverse-in.github.io/">
+  <link rel="canonical" href="https://kashishverse.github.io/">
+
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
 <header>
   <h1>KashishVerse</h1>
-  <p class="tagline">Original Poetry & Quiet Reflections</p>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="stories.html">Stories</a>
-    <a href="essays.html">Essays</a>
-    <a href="library.html">Library</a>
-    <a href="quotes.html">Quotes</a>
-    <a href="archive.html">Archive</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <p class="tagline">Where words meet silence, and images breathe.</p>
 </header>
 
 <main>
-  <section class="content">
-    <h2>Latest Poem</h2>
-    <p>
-      Silence has a voice<br>
-      only the lonely understand.<br>
-      Words rest between breaths,<br>
-      waiting to be felt, not spoken.
-    </p>
-  </section>
+
+  <!-- POEM 1 -->
+  <article class="poem">
+    <h2>For Every Animal Left Behind, a Piece of Humanity Is Lost</h2>
+    <img src="images/image1.jpeg" alt="Stray animal in shadows">
+    <blockquote>
+      In the shadows, they hide,<br>
+      With hunger deep inside.<br>
+      In their innocent eyes<br>
+      Lies a plea for love that never dies.
+    </blockquote>
+  </article>
+
+  <!-- POEM 2 -->
+  <article class="poem">
+    <h2>Don’t Grow Up — It’s a Trap</h2>
+    <img src="images/image2.jpeg" alt="Childhood sunlight and dreams">
+    <blockquote>
+      As the sunlight touches my peepers,<br>
+      In childhood, we were dream seekers.<br>
+      Searching for life’s hidden treasures,<br>
+      Far away from adult pleasures.
+    </blockquote>
+  </article>
+
+  <!-- POEM 3 -->
+  <article class="poem">
+    <h2>You Must Be Strong Enough to Protect Yourself</h2>
+    <img src="images/image3.jpeg" alt="Strength and resilience">
+    <blockquote>
+      They say fear is our greatest weakness,<br>
+      Yet I’ve only seen hate become<br>
+      Someone’s appraiser,<br>
+      By filling their souls with inadequacy.
+    </blockquote>
+  </article>
+
+  <!-- POEM 4 -->
+  <article class="poem">
+    <h2>Bright as the Moon, Deep as the Ocean</h2>
+    <img src="images/image4.jpeg" alt="Moonlight over ocean waves">
+    <blockquote>
+      Beneath the moon’s soft, tender glow,<br>
+      Waves whisper secrets they crave to show.<br>
+      In the shimmer of night, love finds its way,<br>
+      A blissful dance where hearts gently sway.
+    </blockquote>
+  </article>
+
+  <!-- POEM 5 -->
+  <article class="poem">
+    <h2>Do You Believe in Angels? I Do</h2>
+    <img src="images/image5.jpeg" alt="Soft divine light">
+    <blockquote>
+      As the angel whispers in my ear,<br>
+      A sensation profound and sheer.<br>
+      Love is a gift from the divine,<br>
+      Never let go of that sacred shine.
+    </blockquote>
+  </article>
+
+  <!-- POEM 6 -->
+  <article class="poem">
+    <h2>In the Morning’s Quiet Embrace</h2>
+    <img src="images/image6.jpeg" alt="City morning calm">
+    <blockquote>
+      Nature’s beauty in this morning scene,<br>
+      A peaceful moment, calm and serene.<br>
+      As the world awakens, a new day begins,<br>
+      With the sun, the birds, and the city’s spins.
+    </blockquote>
+  </article>
+
+  <!-- POEM 7 -->
+  <article class="poem">
+    <h2>The Beauty of the Sky Has Always Left Me in Awe</h2>
+    <img src="images/image7.jpeg" alt="Colorful sky at dawn">
+    <blockquote>
+      The sky aglow with colors so bright,<br>
+      A breathtaking sight, a pure delight.<br>
+      In harmony, they dance and play,<br>
+      Capturing the essence of a brand-new day.
+    </blockquote>
+  </article>
+
+  <!-- POEM 8 -->
+  <article class="poem">
+    <h2>Amidst Tranquil Waters and Whispering Mountains</h2>
+    <img src="images/image8.jpeg" alt="Mountains and water landscape">
+    <blockquote>
+      Dreamy days and skies so wide,<br>
+      Boats and bubbles side by side.<br>
+      Come and join the cheerful cheer,<br>
+      In this land of wonder, calm, and dear.
+    </blockquote>
+  </article>
+
+  <!-- POEM 9 -->
+  <article class="poem">
+    <h2>Family Is Where the Heart Feels Home</h2>
+    <img src="images/image9.jpeg" alt="Quiet family moment">
+    <blockquote>
+      In the silence where echoes softly dwell,<br>
+      There’s one who listens, never to tell.<br>
+      A haven of calm where fears dispel,<br>
+      Yet why orchids he keeps away,<br>
+      I cannot tell.
+    </blockquote>
+  </article>
+
+  <!-- POEM 10 -->
+  <article class="poem">
+    <h2>Life Is a Garden, and Every Experience Is a Seed</h2>
+    <img src="images/image10.jpeg" alt="Snowy mountains at dawn">
+    <blockquote>
+      As dawn’s first light caresses the snow,<br>
+      Mountains awaken with a gentle glow.<br>
+      A dance of light on rugged crest,<br>
+      Nature’s grand canvas at its very best.
+    </blockquote>
+  </article>
+
 </main>
 
 <footer>
- © 2025 Kashish. All rights reserved.
-Content licensed under CC BY-NC-ND 4.0.
-All poems, texts, and creative content on this website are original works by Kashish batheja.
-No part of this content may be copied, reproduced, modified, or distributed without explicit written permission.
-
+  <p>© 2025 KashishVerse · All rights reserved.</p>
 </footer>
+
 </body>
 </html>
