Revise About page content and metadata
Updated the title and meta description for better clarity and SEO. Enhanced the content in the main section to reflect the poet's philosophy and purpose.

--- a/about.html
+++ b/about.html
@@ -2,31 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About | KashishVerse</title>
-  <meta name="description" content="About Kashish, the poet behind KashishVerse.">
+  <title>About the Poet | KashishVerse</title>
+  <meta name="description" content="Learn about Kashish, the poet behind KashishVerse, and her journey through words, silence, and reflection.">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<header>
+
+<header class="site-header">
   <h1>About the Poet</h1>
-  <nav>
-    <a href="index.html">Home</a>
+  <nav class="nav">
+    <a href="index.html">Poetry</a>
+    <a href="stories.html">Stories</a>
+    <a href="essays.html">Essays</a>
+    <a href="library.html">Library</a>
+    <a href="quotes.html">Quotes</a>
     <a href="archive.html">Archive</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<main class="content">
+<main class="container">
   <p>
-    Kashish is a writer who explores silence, emotion, identity,
-    and the quiet spaces between words. KashishVerse is a personal
-    archive of poems and reflections written with honesty and restraint.
+    Kashish is a writer who believes words carry memory.  
+    KashishVerse is a quiet archive of poems, reflections, and stories written with honesty,
+    simplicity, and emotional depth.  
+    This space exists to preserve moments that would otherwise disappear.
   </p>
 </main>
 
-<footer>
-  <p>© 2025 KashishVerse</p>
+<footer class="site-footer">
+  © 2025 KashishVerse
 </footer>
+
 </body>
 </html>
