--- a/essays.html
+++ b/essays.html
@@ -2,12 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Essays | KashishVerse</title>
+  <title>Essays & Reflections | KashishVerse</title>
+  <meta name="description" content="Personal essays and reflections by Kashish on life, thought, growth, and silence.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header><h1>Short Stories</h1></header>
-<main class="content"><p>Coming soon.</p></main>
-<footer><p>© 2025 KashishVerse</p></footer>
+
+<header class="site-header">
+  <h1>Essays & Reflections</h1>
+  <nav class="nav">
+    <a href="index.html">Poetry</a>
+    <a href="stories.html">Stories</a>
+    <a href="library.html">Library</a>
+    <a href="quotes.html">Quotes</a>
+    <a href="archive.html">Archive</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<main class="container">
+  <p class="page-description">
+    Long-form thoughts, reflections, and blog-style writings.  
+    Essays will appear here soon.
+  </p>
+</main>
+
+<footer class="site-footer">© 2025 KashishVerse</footer>
 </body>
 </html>
