--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- POEM 1 -->
     <section class="poem">
-      <img src="images/image1.jpg" alt="Poetry about abandoned animals">
+      <img src="image/image1.jpeg" alt="Poetry about abandoned animals">
       <h2>For Every Animal Left Behind, a Piece of Humanity Is Lost</h2>
       <p>
         In the shadows they hide,<br>
@@ -52,7 +52,7 @@
 
     <!-- POEM 2 -->
     <section class="poem">
-      <img src="images/image2.jpg" alt="Poetry about childhood">
+      <img src="images/image2.jpeg" alt="Poetry about childhood">
       <h2>Don't Grow Up, It’s a Trap</h2>
       <p>
         As the sunlight touches my peepers,<br>
@@ -64,7 +64,7 @@
 
     <!-- POEM 3 -->
     <section class="poem">
-      <img src="images/image3.jpg" alt="Poetry about strength">
+      <img src="images/image3.jpeg" alt="Poetry about strength">
       <h2>You Must Be Strong Enough to Protect Yourself</h2>
       <p>
         They say fear is our greatest weakness,<br>
@@ -76,7 +76,7 @@
 
     <!-- POEM 4 -->
     <section class="poem">
-      <img src="images/image4.jpg" alt="Poetry about moon and ocean">
+      <img src="images/image4.jpeg" alt="Poetry about moon and ocean">
       <h2>Bright as the Moon, Deep as the Ocean — Can You Feel It?</h2>
       <p>
         Beneath the moon’s soft, tender glow,<br>
@@ -88,7 +88,7 @@
 
     <!-- POEM 5 -->
     <section class="poem">
-      <img src="images/image5.jpg" alt="Poetry about angels">
+      <img src="images/image5.jpeg" alt="Poetry about angels">
       <h2>Do You Believe in Angels? I Do.</h2>
       <p>
         As the angel whispers in my ear,<br>
@@ -100,7 +100,7 @@
 
     <!-- POEM 6 -->
     <section class="poem">
-      <img src="images/image6.jpg" alt="Poetry about morning city">
+      <img src="images/image6.jpeg" alt="Poetry about morning city">
       <h2>In the Morning’s Quiet Embrace, a City Finds Its Gentle Pace</h2>
       <p>
         Nature’s beauty in this morning scene,<br>
@@ -112,7 +112,7 @@
 
     <!-- POEM 7 -->
     <section class="poem">
-      <img src="images/image7.jpg" alt="Poetry about sky">
+      <img src="images/image7.jpeg" alt="Poetry about sky">
       <h2>The Beauty of the Sky Always Leaves Me in Awe</h2>
       <p>
         The sky aglow with colors so bright,<br>
@@ -124,7 +124,7 @@
 
     <!-- POEM 8 -->
     <section class="poem">
-      <img src="images/image8.jpg" alt="Poetry about mountains and water">
+      <img src="images/image8.jpeg" alt="Poetry about mountains and water">
       <h2>Amidst the Tranquil Waters and Whispering Mountains</h2>
       <p>
         Dreamy days and skies so wide,<br>
@@ -136,7 +136,7 @@
 
     <!-- POEM 9 -->
     <section class="poem">
-      <img src="images/image9.jpg" alt="Poetry about family">
+      <img src="images/image9.jpeg" alt="Poetry about family">
       <h2>Family Is Where the Heart Feels Home</h2>
       <p>
         In the silence where echoes softly dwell,<br>
@@ -148,7 +148,7 @@
 
     <!-- POEM 10 -->
     <section class="poem">
-      <img src="images/image10.jpg" alt="Poetry about life">
+      <img src="images/image10.jpeg" alt="Poetry about life">
       <h2>Life Is a Garden, and Every Experience Is a Seed</h2>
       <p>
         As dawn’s first light caresses the snow,<br>
