--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- POEM 1 -->
     <section class="poem">
-      <img src="image/image1.jpeg" alt="Poetry about abandoned animals">
+      <img src="images/image1.jpeg" alt="Poetry about abandoned animals">
       <h2>For Every Animal Left Behind, a Piece of Humanity Is Lost</h2>
       <p>
         In the shadows they hide,<br>
