--- a/essays/mental-health-wellness.html
+++ b/essays/mental-health-wellness.html
@@ -40,9 +40,10 @@
     </p>
   </article>
 
-  <nav style="margin-top:60px;">
-    <a href="../essays.html">← Back to Essays</a>
-  </nav>
+ <nav>
+  <a href="../index.html">Home</a> ·
+  <a href="../essays.html">Essays</a>
+</nav>
 
 </main>
 
