--- a/library.html
+++ b/library.html
@@ -3,31 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <title>Library | KashishVerse</title>
-  <meta name="description" content="Book reviews and reading reflections by Kashish.">
+
+  <meta name="description" content="A personal reading library curated by Kashish — books on spirituality, fiction, self-growth, mythology, and emotional depth.">
+
+  <link rel="canonical" href="https://kashishverse-in.github.io/kashishverse/library.html">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header class="site-header">
-  <h1>Library</h1>
-  <nav class="nav">
-    <a href="index.html">Poetry</a>
-    <a href="stories.html">Stories</a>
-    <a href="essays.html">Essays</a>
-    <a href="quotes.html">Quotes</a>
-    <a href="archive.html">Archive</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+<main style="max-width:900px;margin:80px auto;padding:0 20px;">
 
-<main class="container">
-  <p class="page-description">
-    A personal library of books, reviews, and literary impressions.  
-    Content coming soon.
-  </p>
+  <header>
+    <h1>Library</h1>
+    <p>
+      A curated collection of books that shaped my thinking, emotions, discipline,
+      and understanding of human nature.
+    </p>
+  </header>
+
+  <!-- Spiritual & Philosophical -->
+  <section>
+    <h2>Spiritual & Philosophical Foundations</h2>
+
+    <article>
+      <h3>Shrimad Bhagavad Gita</h3>
+      <p>
+        A timeless guide on duty, detachment, and clarity.
+        Each reading reveals a new layer of meaning.
+      </p>
+    </article>
+
+    <article>
+      <h3>The Forty Rules of Love — Elif Shafak</h3>
+      <p>
+        A gentle yet powerful exploration of love, surrender,
+        and spiritual transformation.
+      </p>
+    </article>
+
+    <article>
+      <h3>The Monk Who Sold His Ferrari — Robin Sharma</h3>
+      <p>
+        A simple reminder that inner wealth always matters more than outward success.
+      </p>
+    </article>
+  </section>
+
+  <hr>
+
+  <!-- Fiction & Storytelling -->
+  <section>
+    <h2>Fiction & Storytelling</h2>
+
+    <article>
+      <h3>The Alchemist — Paulo Coelho</h3>
+      <p>
+        A quiet, reflective story about faith, timing, and listening to oneself.
+      </p>
+    </article>
+
+    <article>
+      <h3>A Little Life — Hanya Yanagihara</h3>
+      <p>
+        Emotionally intense and unforgettable.
+        A story that stays long after the last page.
+      </p>
+    </article>
+
+    <article>
+      <h3>Eleven Minutes — Paulo Coelho</h3>
+      <p>
+        A reflective narrative on desire, identity, and emotional vulnerability.
+      </p>
+    </article>
+
+    <article>
+      <h3>Fairy Tales</h3>
+      <p>
+        Stories that remind me why imagination and symbolism matter at every age.
+      </p>
+    </article>
+  </section>
+
+  <hr>
+
+  <!-- Mythology -->
+  <section>
+    <h2>Mythology & Reimagined History</h2>
+
+    <article>
+      <h3>The Shiva Trilogy — Amish Tripathi</h3>
+      <p>
+        (The Immortals of Meluha · The Secret of the Nagas · The Oath of the Vayuputras)
+        <br>
+        A modern retelling that blends philosophy, leadership, and myth.
+      </p>
+    </article>
+
+    <article>
+      <h3>The Hidden Hindu</h3>
+      <p>
+        A fast-paced blend of mythology and mystery with spiritual undertones.
+      </p>
+    </article>
+  </section>
+
+  <hr>
+
+  <!-- Mystery -->
+  <section>
+    <h2>Mystery & Suspense</h2>
+
+    <article>
+      <h3>A Good Girl’s Guide to Murder Series — Holly Jackson</h3>
+      <p>
+        (A Good Girl’s Guide to Murder · Good Girl, Bad Blood · As Good As Dead)
+        <br>
+        Sharp, engaging, and addictive.
+        A reminder that storytelling can be both smart and gripping.
+      </p>
+    </article>
+  </section>
+
+  <hr>
+
+  <!-- Habits & Growth -->
+  <section>
+    <h2>Habits, Discipline & Self-Growth</h2>
+
+    <article>
+      <h3>Atomic Habits — James Clear</h3>
+      <p>
+        Practical, realistic, and effective.
+        A book I return to when consistency matters more than motivation.
+      </p>
+    </article>
+
+    <article>
+      <h3>The Ultimate Gift — Jim Stovall</h3>
+      <p>
+        A short but meaningful reminder about values, gratitude, and responsibility.
+      </p>
+    </article>
+  </section>
+
 </main>
 
-<footer class="site-footer">© 2025 KashishVerse</footer>
+<footer style="text-align:center;margin:60px 0;color:#666;">
+  <p>© KashishVerse</p>
+</footer>
+
 </body>
 </html>
