--- a/stories.html
+++ b/stories.html
@@ -4,72 +4,64 @@
   <meta charset="UTF-8">
   <title>Stories | KashishVerse</title>
 
-  <meta name="description" content="Original short fiction by Kashish — stories that explore memory, time, identity, and the unseen layers of reality.">
+  <meta name="description" content="Original short stories by Kashish exploring time, memory, identity, and the unseen layers of reality.">
   <meta name="author" content="Kashish Batheja">
-
   <link rel="canonical" href="https://kashishverse-in.github.io/kashishverse/stories.html">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<main style="max-width:900px;margin:80px auto;padding:0 20px;">
+<!-- SITE HEADER -->
+<header style="border-bottom:1px solid #ddd;">
+  <div style="max-width:900px;margin:0 auto;padding:20px;">
+    <h1 style="margin:0;">
+      <a href="index.html" style="text-decoration:none;color:inherit;">
+        KashishVerse
+      </a>
+    </h1>
 
-  <header>
-    <h1>Stories</h1>
+    <nav style="margin-top:10px;display:flex;gap:14px;flex-wrap:wrap;">
+      <a href="about.html">About</a>
+      <a href="stories.html"><strong>Stories</strong></a>
+      <a href="essays.html">Blogs</a>
+      <a href="library.html">Library</a>
+      <a href="quotes.html">Quotes</a>
+      <a href="archive.html">Archive</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<!-- MAIN CONTENT -->
+<main style="max-width:900px;margin:60px auto;padding:0 20px;">
+
+  <h2>Stories</h2>
+  <p>
+    Fiction rooted in atmosphere, memory, and quiet unease.
+    Stories that sit between reality and something slightly off.
+  </p>
+
+  <article style="margin-top:40px;">
+    <h3>The Apartment on the Seventh Floor</h3>
+    <p style="color:#666;">Short Fiction · Mystery · Speculative</p>
+
     <p>
-      Original short fiction exploring time, memory, and the quiet tension between reality and what lies beneath it.
+      A family moves into a suspiciously cheap apartment.
+      Rooftop strangers appear without explanation.
+      A hidden staircase reveals two doors — Past and Future.
     </p>
-  </header>
 
-  <section>
-
-    <article>
-      <h2>The Apartment on the Seventh Floor</h2>
-      <p style="color:#666;">Short Fiction · Mystery · Speculative</p>
-
-      <p>
-        When a family moves into a suspiciously cheap apartment, strange rooftop visitors,
-        hidden staircases, and impossible doors begin to blur the line between past, future,
-        and identity itself.
-      </p>
-
-      <p>
-        A story about curiosity, time, and the danger of looking too far ahead.
-      </p>
-
-      <!-- OPTIONAL: later you can link full story page -->
-      <!-- <a href="stories/seventh-floor.html">Read full story →</a> -->
-
-    </article>
-
-  </section>
+    <p>
+      A story about curiosity, time, and the danger of looking too far ahead.
+    </p>
+  </article>
 
 </main>
 
-<footer style="text-align:center;margin:60px 0;color:#666;">
-  <p>© KashishVerse</p>
+<footer style="text-align:center;color:#666;margin:60px 0;">
+  © KashishVerse
 </footer>
 
 </body>
-  <header style="max-width:900px;margin:40px auto 0;padding:0 20px;">
-  <h1 style="margin-bottom:10px;">
-    <a href="index.html" style="text-decoration:none;color:inherit;">
-      KashishVerse
-    </a>
-  </h1>
-
-  <nav style="display:flex;flex-wrap:wrap;gap:12px;">
-    <a href="about.html">About</a>
-    <a href="stories.html">Stories</a>
-    <a href="essays.html">Blogs</a>
-    <a href="library.html">Library</a>
-    <a href="quotes.html">Quotes</a>
-    <a href="archive.html">Archive</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
-  <hr style="margin-top:20px;">
-</header>
-
 </html>
