--- a/library.html
+++ b/library.html
@@ -4,175 +4,79 @@
   <meta charset="UTF-8">
   <title>Library | KashishVerse</title>
 
-  <meta name="description" content="A personal reading library curated by Kashish — books on spirituality, fiction, self-growth, mythology, and emotional depth.">
-
+  <meta name="description" content="A personal reading library by Kashish — books that shaped thought, discipline, imagination, and inner clarity.">
+  <meta name="author" content="Kashish Batheja">
   <link rel="canonical" href="https://kashishverse-in.github.io/kashishverse/library.html">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<main style="max-width:900px;margin:80px auto;padding:0 20px;">
+<!-- SITE HEADER -->
+<header style="border-bottom:1px solid #ddd;">
+  <div style="max-width:900px;margin:0 auto;padding:20px;">
+    <h1 style="margin:0;">
+      <a href="index.html" style="text-decoration:none;color:inherit;">
+        KashishVerse
+      </a>
+    </h1>
 
-  <header>
-    <h1>Library</h1>
-    <p>
-      A curated collection of books that shaped my thinking, emotions, discipline,
-      and understanding of human nature.
-    </p>
-  </header>
+    <nav style="margin-top:10px;display:flex;gap:14px;flex-wrap:wrap;">
+      <a href="about.html">About</a>
+      <a href="stories.html">Stories</a>
+      <a href="essays.html">Blogs</a>
+      <a href="library.html"><strong>Library</strong></a>
+      <a href="quotes.html">Quotes</a>
+      <a href="archive.html">Archive</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- Spiritual & Philosophical -->
-  <section>
-    <h2>Spiritual & Philosophical Foundations</h2>
+<!-- MAIN CONTENT -->
+<main style="max-width:900px;margin:60px auto;padding:0 20px;">
 
-    <article>
-      <h3>Shrimad Bhagavad Gita</h3>
-      <p>
-        A timeless guide on duty, detachment, and clarity.
-        Each reading reveals a new layer of meaning.
-      </p>
-    </article>
+  <h2>Library</h2>
+  <p>
+    A curated list of books I’ve read over the years — spanning philosophy,
+    mythology, fiction, psychology, and self-discipline.
+  </p>
 
-    <article>
-      <h3>The Forty Rules of Love — Elif Shafak</h3>
-      <p>
-        A gentle yet powerful exploration of love, surrender,
-        and spiritual transformation.
-      </p>
-    </article>
+  <section style="margin-top:40px;">
 
-    <article>
-      <h3>The Monk Who Sold His Ferrari — Robin Sharma</h3>
-      <p>
-        A simple reminder that inner wealth always matters more than outward success.
-      </p>
-    </article>
-  </section>
+    <h3>Read</h3>
+    <ul>
+      <li>Shrimad Bhagwad Geeta</li>
+      <li>The Alchemist — Paulo Coelho</li>
+      <li>The Forty Rules of Love — Elif Shafak</li>
+      <li>Atomic Habits — James Clear</li>
+      <li>A Little Life — Hanya Yanagihara</li>
+      <li>The Monk Who Sold His Ferrari</li>
+      <li>The Immortals of Meluha Trilogy — Amish Tripathi</li>
+      <li>A Good Girl’s Guide to Murder Series</li>
+      <li>Harry Potter and the Philosopher’s Stone</li>
+      <li>Eleven Minutes</li>
+      <li>The Hidden Hindu</li>
+      <li>Fairy Tales</li>
+    </ul>
 
-  <hr>
+    <h3 style="margin-top:40px;">Currently Reading / To Be Read</h3>
+    <ul>
+      <li>Shri Ram Charitra Manas</li>
+      <li>Thinking, Fast and Slow</li>
+      <li>The Palace of Illusions</li>
+      <li>To Kill a Mockingbird</li>
+      <li>The Intelligent Investor</li>
+      <li>Three Men in a Boat</li>
+    </ul>
 
-  <!-- Fiction & Storytelling -->
-  <section>
-    <h2>Fiction & Storytelling</h2>
-
-    <article>
-      <h3>The Alchemist — Paulo Coelho</h3>
-      <p>
-        A quiet, reflective story about faith, timing, and listening to oneself.
-      </p>
-    </article>
-
-    <article>
-      <h3>A Little Life — Hanya Yanagihara</h3>
-      <p>
-        Emotionally intense and unforgettable.
-        A story that stays long after the last page.
-      </p>
-    </article>
-
-    <article>
-      <h3>Eleven Minutes — Paulo Coelho</h3>
-      <p>
-        A reflective narrative on desire, identity, and emotional vulnerability.
-      </p>
-    </article>
-
-    <article>
-      <h3>Fairy Tales</h3>
-      <p>
-        Stories that remind me why imagination and symbolism matter at every age.
-      </p>
-    </article>
-  </section>
-
-  <hr>
-
-  <!-- Mythology -->
-  <section>
-    <h2>Mythology & Reimagined History</h2>
-
-    <article>
-      <h3>The Shiva Trilogy — Amish Tripathi</h3>
-      <p>
-        (The Immortals of Meluha · The Secret of the Nagas · The Oath of the Vayuputras)
-        <br>
-        A modern retelling that blends philosophy, leadership, and myth.
-      </p>
-    </article>
-
-    <article>
-      <h3>The Hidden Hindu</h3>
-      <p>
-        A fast-paced blend of mythology and mystery with spiritual undertones.
-      </p>
-    </article>
-  </section>
-
-  <hr>
-
-  <!-- Mystery -->
-  <section>
-    <h2>Mystery & Suspense</h2>
-
-    <article>
-      <h3>A Good Girl’s Guide to Murder Series — Holly Jackson</h3>
-      <p>
-        (A Good Girl’s Guide to Murder · Good Girl, Bad Blood · As Good As Dead)
-        <br>
-        Sharp, engaging, and addictive.
-        A reminder that storytelling can be both smart and gripping.
-      </p>
-    </article>
-  </section>
-
-  <hr>
-
-  <!-- Habits & Growth -->
-  <section>
-    <h2>Habits, Discipline & Self-Growth</h2>
-
-    <article>
-      <h3>Atomic Habits — James Clear</h3>
-      <p>
-        Practical, realistic, and effective.
-        A book I return to when consistency matters more than motivation.
-      </p>
-    </article>
-
-    <article>
-      <h3>The Ultimate Gift — Jim Stovall</h3>
-      <p>
-        A short but meaningful reminder about values, gratitude, and responsibility.
-      </p>
-    </article>
   </section>
 
 </main>
 
-<footer style="text-align:center;margin:60px 0;color:#666;">
-  <p>© KashishVerse</p>
+<footer style="text-align:center;color:#666;margin:60px 0;">
+  © KashishVerse
 </footer>
 
 </body>
-  <header style="max-width:900px;margin:40px auto 0;padding:0 20px;">
-  <h1 style="margin-bottom:10px;">
-    <a href="index.html" style="text-decoration:none;color:inherit;">
-      KashishVerse
-    </a>
-  </h1>
-
-  <nav style="display:flex;flex-wrap:wrap;gap:12px;">
-    <a href="about.html">About</a>
-    <a href="stories.html">Stories</a>
-    <a href="essays.html">Blogs</a>
-    <a href="library.html">Library</a>
-    <a href="quotes.html">Quotes</a>
-    <a href="archive.html">Archive</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
-  <hr style="margin-top:20px;">
-</header>
-
 </html>
