--- a/essays/technology-future-education.html
+++ b/essays/technology-future-education.html
@@ -3,17 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>How Technology Is Shaping the Future of Education | KashishVerse</title>
-
   <meta name="description" content="An essay on how technology is transforming education, learning methods, teaching practices, and accessibility.">
   <meta name="author" content="Kashish Batheja">
-
   <link rel="canonical" href="https://kashishverse-in.github.io/kashishverse/essays/technology-future-education.html">
   <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 
-<main style="max-width:750px;margin:80px auto;padding:0 20px;">
+<header style="max-width:900px;margin:40px auto;padding:0 20px;text-align:center;">
+  <h1><a href="../index.html" style="text-decoration:none;color:#000;">KashishVerse</a></h1>
+  <nav style="margin-top:10px;">
+    <a href="../about.html">About</a> |
+    <a href="../stories.html">Stories</a> |
+    <a href="../essays.html">Blogs</a> |
+    <a href="../library.html">Library</a> |
+    <a href="../quotes.html">Quotes</a> |
+    <a href="../archive.html">Archive</a> |
+    <a href="../contact.html">Contact</a>
+  </nav>
+</header>
+
+<main style="max-width:750px;margin:40px auto;padding:0 20px;">
 
   <article>
     <h1>How Technology Is Shaping the Future of Education</h1>
@@ -24,26 +35,26 @@
     </p>
 
     <p>
-      Personalized learning, online platforms, and gamification have made education more flexible and inclusive.
+      Personalized learning, online platforms, and gamification have made education more flexible and inclusive. Adaptive software, AI tools, and interactive platforms help students learn at their own pace, while maintaining engagement and curiosity.
     </p>
 
     <p>
-      Teachers benefit through learning management systems, virtual classrooms, and continuous professional development.
+      Teachers benefit through learning management systems, virtual classrooms, and continuous professional development. They can deliver lessons effectively, track progress, and reach students beyond the classroom.
     </p>
 
     <p>
-      Despite its advantages, challenges such as the digital divide and reduced human interaction remain.
+      Despite its advantages, challenges such as the digital divide, unequal access, and reduced human interaction remain significant.
     </p>
 
     <p>
-      The future of education depends not only on innovation, but on thoughtful implementation.
+      The future of education depends not only on innovation, but on thoughtful implementation that balances technology with human connection.
     </p>
   </article>
 
- <nav>
-  <a href="../index.html">Home</a> ·
-  <a href="../essays.html">Essays</a>
-</nav>
+  <nav style="margin-top:40px;text-align:center;">
+    <a href="../index.html">Home</a> ·
+    <a href="../essays.html">Essays</a>
+  </nav>
 
 </main>
 
