--- a/stories/secret-chapter.html
+++ b/stories/secret-chapter.html
@@ -17,13 +17,37 @@
 
 <main style="max-width:750px;margin:40px auto;padding:0 20px;">
   <article>
-    <h1>The Whispering Secret</h1>
-    <p>This hidden chapter teaches the first “spell” from your Control Book. Only curious readers will reach here.</p>
+  <h1>The Whisper in the Mirror</h1>
+  <p>
+    The protagonist found a thin, leather-bound book in the old library. Its cover was unmarked except for a faint symbol: a circle split into four elements — fire, air, water, earth. 
+  </p>
 
-    <p><strong>Instruction / Puzzle:</strong> Align the four elements — fire, water, air, earth — to unlock the next secret link. (You can create a small clickable interactive element or image for this.)</p>
+  <p>
+    As soon as the book opened, faint letters shimmered on the page. They seemed jumbled, almost meaningless. But for those who were attentive, the words whispered a secret: 
+    <span class="secret" onclick="revealClue(this)">“To see beyond, first align what’s broken.” ◉</span>
+  </p>
 
-    <p>Keep reading carefully, as the next clue is embedded in the text itself…</p>
-  </article>
+  <p>
+    The letters shifted as the reader’s eyes lingered, hinting at an arrangement. Something about fire, water, air, and earth… if they were placed in the right order, the next page would reveal itself.  
+  </p>
+
+  <p>
+    Only the curious, the ones who didn’t rush past, could notice the subtle pattern hidden in the text, leading to the deeper truths of the book.
+  </p>
+
+  <!-- Hidden interactive reveal -->
+  <p id="hidden-clue" style="display:none;">
+    🔑 You’ve uncovered the first secret! <a href="next-hidden-chapter.html">Continue to the next chapter →</a>
+  </p>
+</article>
+
+<script>
+function revealClue(el){
+  el.style.color = "#ff5500";
+  document.getElementById('hidden-clue').style.display = 'block';
+}
+</script>
+
 
   <nav style="text-align:center;margin-top:40px;">
     <a href="full-story.html">← Back to Story</a>
