--- a/essays.html
+++ b/essays.html
@@ -12,15 +12,23 @@
 
 <body>
 
-<main style="max-width:900px;margin:80px auto;padding:0 20px;">
+<header style="max-width:900px;margin:40px auto 20px;padding:0 20px;">
+  <h1><a href="index.html" style="text-decoration:none;color:#000;">KashishVerse</a></h1>
+  <nav style="margin-top:10px;">
+    <a href="index.html">Poetry</a> |
+    <a href="stories.html">Stories</a> |
+    <a href="essays.html">Essays</a> |
+    <a href="library.html">Library</a> |
+    <a href="quotes.html">Quotes</a> |
+    <a href="archive.html">Archive</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <header>
-    <h1>Essays</h1>
-    <p>Long-form reflections on mental health, learning, language, and the quiet complexities of modern life.</p>
-  </header>
+<main style="max-width:900px;margin:40px auto;padding:0 20px;">
 
   <section>
-
     <article>
       <h2>
         <a href="essays/mental-health-wellness.html">
